# ode-solve

./: .gitignore  CMakeLists.txt
src/: config.h.in  euler.c  euler.h  exact.txt  forward_euler.txt  main.c  midpoint_euler.txt  problem.c  problem.h
